--- a/demo-清除浮动的影响.html
+++ b/demo-清除浮动的影响.html
@@ -19,7 +19,7 @@
 		.box{
 			border:1px solid #ccc;
 		}
-		.box:after{
+		.clearfix:after{
 			content:"";
 			display:block;
 			height:0;
@@ -30,10 +30,11 @@
 	</style>
 </head>
 <body>
-	<div class="box">
+	<div class="box clearfix">
 		<div class="fl"></div>
 		<div class="fr"></div>
 		<!-- <div style="clear:both;"></div> -->
 	</div>
+<div></div>
 </body>
 </html>
