--- a/轮播图/index.html
+++ b/轮播图/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>轮播图</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="https://libs.cdnjs.net/jquery/3.3.1/jquery.min.js"></script>
+    <!--<script src="https://libs.cdnjs.net/jquery/3.3.1/jquery.min.js"></script>-->
+    <script src="../exercise/js/jquery-3.3.1.min.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
