闭包和惰性函数

--- a/exercise/date时间日期.html
+++ b/exercise/date时间日期.html
@@ -6,6 +6,9 @@
     <script src="js/uDate.js"></script>
 </head>
 <body>
+<div>
+    khgggggggggggggggggg
+</div>
 <script>
     //假设今天是2018-09-07
     var startDate = new Date().getNewDate(-6);  //2018-09-01
