--- a/exercise/date时间日期.html
+++ b/exercise/date时间日期.html
@@ -12,11 +12,38 @@
     var endDate = new Date().getNewDate(0);     //2018-09-07
 
     //['2018-09-01','2018-09-02','2018-09-03','2018-09-04','2018-09-05','2018-09-06'，'2018-09-07']
-    var dateArray = getDateRangeArray(startDate,endDate,'day');
-    var dateLength = getDateRangeLength(startDate,endDate,'day');       //时间差
+    var dateArray = getDateRangeArray(startDate, endDate, 'day');
+    var dateLength = getDateRangeLength(startDate, endDate, 'day');       //时间差
 
     //一般为求环比的时候用到
     var lastStartDate = new Date(startDate).getNewDate(-dateLength)
+    /**************************  promise  start*********************************/
+    var promise = new Promise((resolve, reject) => {
+       setTimeout(()=>{
+           console.log(1000)
+           resolve(1000)
+
+       },1000)
+    })
+    var promise1=new Promise((resolve,reject)=>{
+        setTimeout(()=>{
+            console.log(2000)
+            resolve(2000)
+        },2000)
+
+    })
+    var promise2=new Promise((resolve,reject)=>{
+        setTimeout(()=>{
+            console.log(3000)
+            resolve(3000)
+        },3000)
+
+    })
+    Promise.all([promise2,promise1,promise]).then((data)=>{
+        console.log(data)
+    })
+    /**************************  promise  end*********************************/
+
 </script>
 
 </body>
